--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -3,6 +3,8 @@
 
 <head>
         <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href=""/>
         <link rel="stylesheet" href="public/css/normalize.css"/>
         <link rel="stylesheet" href="public/css/style.css"/>
@@ -10,13 +12,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/28db65c75a.js" crossorigin="anonymous"></script>
-        <title>Oh My Food</title>
+        <title>OhMyFood - La palette du goût</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-4x arrow--position"></i></a>
+            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-2x arrow--position"></i></a>
             <a href="#"><img src="/img/Logo/ohmyfood.png"/></a>
         </div>
     </header>
