--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -32,56 +32,56 @@
             <div class="name">
                 <h1 class="name__restaurant">La palette du goût</h1>
                 <div class="heart-container">
-                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
+                    <i class="fa-regular fa-heart fa-2x fav-heart--black"></i>
                     <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
                 </div>
             </div>
             <div class="menu">
                 <div class="firstPlate">
-                    <h3 class="menu--fonts menu--under">ENTRÉES</h3>
+                    <h3 class="menu--under">ENTRÉES</h3>
                     <div class="menu-pannel">
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Fricassée d'escargot</h4>
-                                    <p class="fonts--weight">Au piment d'Espelette</p>
+                                    <h4>Fricassée d'escargot</h4>
+                                    <p>Au piment d'Espelette</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">25€</p>
+                                    <p>25 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Foie gras de canard mi-cuit</h4>
-                                    <p class="fonts--weight">Et ses copeaux de truffe noire</p>
+                                    <h4>Foie gras de canard mi-cuit</h4>
+                                    <p>Et ses copeaux de truffe noire</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Oeuf au plat</h4>
-                                    <p class="fonts--weight">Assaisonné à la truffe sur lit de caviar</p>
+                                    <h4>Oeuf au plat</h4>
+                                    <p>Assaisonné à la truffe sur lit de caviar</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">20€</p>
+                                    <p>20 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -94,45 +94,45 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de boeuf aux herbes</h4>
-                                    <p class="fonts--weight">Accompagné de sa ribambelle de légumes</p>
+                                    <h4>Filet de boeuf aux herbes</h4>
+                                    <p>Accompagné de sa ribambelle de légumes</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">40€</p>
+                                    <p>40 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Parmentier de queue de boeuf</h4>
-                                    <p class="fonts--weight">À la truffe noire sur sa purée de panais</p>
+                                    <h4>Parmentier de queue de boeuf</h4>
+                                    <p>À la truffe noire sur sa purée de panais</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de turbot</h4>
-                                    <p class="fonts--weight">Aux agrumes</p>
+                                    <h4>Filet de turbot</h4>
+                                    <p>Aux agrumes</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">44€</p>
+                                    <p>44 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -145,45 +145,45 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Paris-Brest</h4>
-                                    <p class="fonts--weight">Revisité</p>
+                                    <h4>Paris-Brest</h4>
+                                    <p>Revisité</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">18€</p>
+                                    <p>18 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Macaron au chocolat d'exception</h4>
-                                    <p class="fonts--weight">Et glace à la vanille de Madagascar</p>
+                                    <h4>Macaron au chocolat d'exception</h4>
+                                    <p>Et glace à la vanille de Madagascar</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">22€</p>
+                                    <p>22 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Mousse au chocolat</h4>
-                                    <p class="fonts--weight">Au piment d'Espelette et à la truffe noire</p>
+                                    <h4>Mousse au chocolat</h4>
+                                    <p>Au piment d'Espelette et à la truffe noire</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">23€</p>
+                                    <p>23 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
             </li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
 </body>
